--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "use-geolocation-position",
     "description": "React hook for geolocation.getCurrentPosition and geolocation.watchPosition",
-    "version": "1.0.0",
+    "version": "0.0.0-dev",
     "author": "Tiaan du Plessis <tiaanduplessis@hotmail.com>",
     "type": "module",
     "main": "src/index.js",
